--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - master
 concurrency:
-  group: ${{ github.event.number }}
+  group: ${{ github.run_id }}
   cancel-in-progress: true
 jobs:
   build:
