--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,51 +1,45 @@
-name: APIM Release
+name: Release Builder
 
 on:
-  release:
-    types: [created]
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to release from'
+        required: true
+        default: 'master'
 
 jobs:
-  create-release:
+  release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout specified branch
         uses: actions/checkout@v3
-
+        with:
+          ref: ${{ github.event.inputs.branch }}
+      
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: 11.0.16+8
           distribution: 'temurin'
-
-      - name: Build the project
-        run: mvn clean package --file pom.xml
-
-      - name: Create Release artifact
+      
+      - name: Build project
+        run: mvn clean install --file pom.xml -DskipTests=true
+      
+      - name: Create Release Tag
+        id: create_release
         run: |
-          mkdir release
-          cp target/*.jar release/
-          
-      - name: Upload Release artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-artifact
-          path: release/**
-
-  publish-release:
-    needs: create-release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Release artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: release-artifact
-          path: ./release-artifact
-
-      - name: Create GitHub Release
+          TAG_NAME="v1.0.${{ github.run_id }}"
+          echo "Creating tag ${TAG_NAME}"
+          git tag -a $TAG_NAME -m "Release version $TAG_NAME"
+          git push origin $TAG_NAME
+      
+      - name: Create GitHub Release  
+        id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.event.release.tag_name }}
-          release_name: ${{ github.event.release.name }}
+          tag_name: ${{ steps.create_release.outputs.tag_name }}
+          release_name: Release ${{ steps.create_release.outputs.tag_name }}
           draft: false
           prerelease: false
         env:
