--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         run: mvn clean install --file pom.xml -DskipTests=true
       
       - name: Create Release Tag
-        id: create_release
+        id: create_tag
         run: |
           TAG_NAME="v1.0.${{ github.run_id }}"
           echo "Creating tag ${TAG_NAME}"
@@ -38,8 +38,8 @@ jobs:
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ steps.create_release.outputs.tag_name }}
-          release_name: Release ${{ steps.create_release.outputs.tag_name }}
+          tag_name: ${{ steps.create_tag.outputs.tag_name }}
+          release_name: Release ${{ steps.create_tag.outputs.tag_name }}
           draft: false
           prerelease: false
         env:
